# mcp

./: .clang-format  .gitignore  CMakeLists.txt  check_format.sh  ms.txt  ms_auth.py
.github/workflows/: ci.yml
include/: _string.h  auth.h  buffer.h  check.h  config.h  connection.h  debug.h  enc_socket.h  json.h  packet.h  packet_encryption.h  packet_handler.h  packet_stream.h  packets.h  position.h  sockbuff.h  stream.h  tablist.h  unionstream.h  utils.h  varint.h  world.h
include/data/: position.h  tablist.h
include/net/: connection.h
include/utils/: hashmap.h  json.h  utils.h
mcp/: CMakeLists.txt  config.c  config.h  debug.c  debug.h  main.c
mcp/auth/: auth.h  mojang_auth.c
mcp/console/: console.c  console.h  sw_buffer.c  sw_buffer.h
mcp/data/: tablist.c  varint.h  world.c  world.h
mcp/net/: connection.c  packet_handler.c  packet_handler.h  packets.c  packets.h  stream.c  stream.h
mcp/net/handlers/login/: on_encryption_request.c  on_login_disconnect.c  on_login_success.c  on_set_compression.c
mcp/net/handlers/play/: on_chat_message.c  on_keep_alive.c  on_player_abilities.c  on_player_list_item.c  on_plugin_message.c  on_server_difficulty.c  on_statistics.c
mcp/net/handlers/status/: on_server_status_response.c
mcp/net/packets/login/: login_start_packet.c
mcp/net/packets/play/: keep_alive_packet.c
mcp/net/packets/status/: status_request_packet.c
mcp/utils/: buffer.c  buffer.h  hashmap.c  hashmap.h  json.c  json.h
src/: buffer.c  config.c  connection.c  console.c  dynstring.c  hashmap.c  json.c  main.c  packet.c  packet_handler.c  packet_stream.c  sockbuff.c  stream.c  string.c  tablist.c  test.c  unionstream.c  utils.c  varint.c  world.c
src/auth/: mojang_auth.c
src/crypto/: enc_socket.c  encrypt_auth_pair.c  packet_encryption.c
src/handlers/: encryption_request.c  login_disconnect.c  on_encryption_request.c  on_login_success.c  on_server_pong.c  on_server_status_response.c  on_set_compression.c  (+1 more)
tests/: test_hash.cpp  test_varint.cpp
(+24 files in other folders)
